# adOHRi-Android

./: .gitignore  build.gradle  settings.gradle
app/: build.gradle  licenses.yml
app/release/: output-metadata.json
app/src/androidTest/java/io/github/jilipop/ad/: ExampleInstrumentedTest.java
app/src/androidTest/java/io/github/jilipop/adohra/: ExampleInstrumentedTest.java
app/src/androidTest/java/io/github/jilipop/adohri/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: licenses.html
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/jniwrap/: ortp.i  ortp_wrap.c
app/src/main/cpp/jniwrap/andrx/: AndrxOutput.cpp  AndrxOutput.h  DataCallback.h  ErrorCallback.h  IAudioSource.h  IRestartable.h  LatencyTuningCallback.cpp  LatencyTuningCallback.h  SoundEngine.cpp  SoundEngine.h  andrx.c  andrx.h  defaults.h  device.c  jni.cpp  log.h  trace.cpp  trace.h
app/src/main/cpp/jniwrap/include/alsa/: asoundlib.h
app/src/main/cpp/jniwrap/include/bctoolbox/: charconv.h  crypto.h  exception.hh  list.h  logging.h  map.h  param_string.h  parser.h  tester.h  utils.hh  vconnect.h  vfs.h  vfs_encrypted.hh  vfs_standard.h
app/src/main/cpp/jniwrap/include/ortp/: CMakeLists.txt
app/src/main/java/io/github/jilipop/ad/: Constants.java  MainActivity.java  ReceiverService.java  WiFiHandler.java
app/src/main/java/io/github/jilipop/ad/jni/: AdReceiver.java  AdReceiverJNI.java
app/src/main/java/io/github/jilipop/ad/swigged/: ortp.java  ortpJNI.java
app/src/main/java/io/github/jilipop/ad/swigged/swigtypes/: SWIGTYPE_p_RtpCallback.java  SWIGTYPE_p_RtpSession.java  SWIGTYPE_p_bool_t.java  SWIGTYPE_p_int.java  SWIGTYPE_p_uint32_t.java  SWIGTYPE_p_uint8_t.java  SWIGTYPE_p_void.java
app/src/main/java/io/github/jilipop/adohra/: Constants.java  MainActivity.java  ReceiverService.java  Secrets.java  WiFiHandler.java
app/src/main/java/io/github/jilipop/adohra/jni/: AdReceiver.java
app/src/main/java/io/github/jilipop/adohri/: App.java  Constants.java  HeadphoneChecker.java  HeadphoneDisconnectionCallback.java  HeadphoneDisconnectionHandler.java  InfoActivity.java  InterruptionCallback.java  LicensesActivity.java  MainActivity.java  ReceiverService.java  Secrets.java  SenderConnectionCallback.java  WiFiHandler.java
app/src/main/java/io/github/jilipop/adohri/audio/: AudioModule.java  HeadphoneChecker.java  HeadphoneDisconnectionCallback.java  HeadphoneDisconnectionHandler.java
app/src/main/java/io/github/jilipop/adohri/jni/: AdReceiver.java  AdReceiverModule.java
app/src/main/java/io/github/jilipop/adohri/notification/: NotificationModule.java
app/src/main/java/io/github/jilipop/adohri/utils/: ThreadingModule.java  VersionProvider.java  VersionProviderImpl.java  VersionProviderModule.java
app/src/main/java/io/github/jilipop/adohri/wifi/: LockModule.java  NetworkModule.java  NetworkRequestBuilder.java  NetworkRequestBuilderImpl.java  SenderConnectionCallback.java  WifiHandler.java
app/src/main/res/layout/: activity_info.xml  activity_licenses.xml  activity_main.xml  toolbar.xml
app/src/main/res/menu/: info_toolbar.xml  licenses_toolbar.xml  main_toolbar.xml
app/src/main/res/mipmap-anydpi-v26/: adohra_round.xml  adohri.xml  ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/test/java/io/github/jilipop/ad/: ExampleUnitTest.java
app/src/test/java/io/github/jilipop/adohra/: ExampleUnitTest.java
app/src/test/java/io/github/jilipop/adohri/: ExampleUnitTest.java  HeadphoneCheckerTests.java  HeadphoneDisconnectionHandlerTests.java  ReceiverServiceTests.java  WifiHandlerTests.java
gradle/wrapper/: gradle-wrapper.properties
